[package]

name = "cgmath"
version = "0.17.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "A linear algebra and mathematics library for computer graphics."

documentation = "https://docs.rs/cgmath"
homepage = "https://github.com/rustgd/cgmath"
repository = "https://github.com/rustgd/cgmath"
readme = "README.md"

keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]

[lib]
name = "cgmath"

[features]
unstable = []
swizzle = []

[dependencies]
approx = "0.3"
mint = { version = "0.5", optional = true }
num-traits = "0.2"
rand = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
simd = { version = "0.2", optional = true }  # works only in rust toolchain up to 1.32

[dev-dependencies]
# glium = "0.23"  # causes problems with nightly-2019-01-01 needed for testing "simd"
serde_json = "1.0"
